--- a/ApplicationDetails.css
+++ b/ApplicationDetails.css
@@ -1,3 +1,8 @@
+.navbar .container{
+  width: 100%;
+  height: 120px;
+  background-color: #fff;
+}
 .application-details-child {
   position: absolute;
   top: 0;
@@ -472,7 +477,7 @@
  /* top: 1125px; */
  left: 150px;
  width: 1024px;
- height: 1086px;
+ height: 0;
  font-size: var(--font-size-xl);
  color: var(--text-primary);
 }
@@ -482,9 +487,9 @@
   left: 0;
   border-radius: var(--br-5xl);
   background-color: var(--background);
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25); */
   width: 100%;
-  height: 1086px;
+  height: 1300px;
 }
 .personal-information {
   position: absolute;
@@ -1115,7 +1120,7 @@
 .button17,
 .button18 {
   position: absolute;
-  top: 979px;
+  top: 1220px;
   left: 620px;
   background-color: var(--other-green);
   box-shadow: 0-2px 0#002d18 inset;
