--- a/Login.css
+++ b/Login.css
@@ -11,6 +11,7 @@ body{
 .btn-primary{
     height: 50px;
     border-radius: 3px;
+    background: #002d18;
 }
 .form-group{
     margin-bottom: 15px;
