--- a/packages.css
+++ b/packages.css
@@ -1,8 +1,15 @@
 .container {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px;
+	margin: 0 80px 0 80px ;
+	left:100px;
 }
+.navbar .container{
+	width: 100%;
+	height: 120px;
+	background-color: #fff;
+	padding :20px;
+  }
 
 .package {
 	flex-basis: 30%;
